deploy/openshift/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hiveshare
  labels:
    app: hiveshare
